--- a/problems/test/index.html
+++ b/problems/test/index.html
@@ -49,7 +49,7 @@
     <header class="p-4">
         <a href="../" class="text-blue-400 hover:underline">← Back to Problem List</a>
     </header>
-    <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 rounded-xl">
+    <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 rounded-xl shadow-lg">
         <h2 class="text-3xl font-bold text-center mb-6">Test</h2>
         
         <div id="result"></div>
