--- a/problems/Lendrick_Kamar/index.html
+++ b/problems/Lendrick_Kamar/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-    <script> const testcaseCount = 2;</script>
+    <title>Lendrick Kamar</title>
+    <script> const testcaseCount = 6;</script>
     <script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
     <script type="module" src="/problems/problemscript.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -15,25 +15,29 @@
         <a href="../" class="text-blue-400 hover:underline">← Back to Problem List</a>
     </header>
     <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 rounded-xl shadow-lg">
-        <h2 class="text-3xl font-bold text-center mb-6">Test</h2>
+        <h2 class="text-3xl font-bold text-center mb-6">Lendrick Kamar</h2>
         
         <div id="result"></div>
         <br>
         <div class="space-y-4 bg-gray-700 p-4 rounded-lg">
-            <p>Given an input N (1 ≤ N ≤ 3), print "hi" N times</p>
+            <p>Would you trust a rose that bloomed in the dark? Only if the number of thorns it has is even!</p>
             <h4 class="font-bold">INPUT FORMAT:</h4>
-            <span>First line contains N</span><br>
+            <span>First line contains N (N < 1e9)</span><br>
             <h4 class="font-bold">OUTPUT FORMAT:</h4>
-            <span>N lines that say "hi"</span><br>
+            <span>"yes" or "no", depending on if you trust it.</span><br>
             <h4 class="font-bold">SAMPLE INPUT:</h4>
-            <span>2</span><br>
+            <span>4</span><br>
             <h4 class="font-bold">SAMPLE OUTPUT:</h4>
-            <span>hi</span><br>
-            <span>hi</span><br>
+            <span>yes</span><br><br>
+            <h4 class="font-bold">SAMPLE INPUT:</h4>
+            <span>5</span><br>
+            <h4 class="font-bold">SAMPLE OUTPUT:</h4>
+            <span>no</span><br>
         </div>
         <br>
         <p>Write code below:</p>
         <br>
+        <script type="module" src="/problems/problemscript.js" defer></script>
         <div id="container">
             <pre id="editor"></pre>
         </div><br>
