--- a/problems/index.html
+++ b/problems/index.html
@@ -10,9 +10,10 @@
     <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl">
         <h1 class="text-4xl font-bold text-center mb-6">Problems List</h1>
         <!-- Uncomment to enable link -->
-        <div id="problem-list" class="text-2xl space-y-4 block text-blue-400 hover:underline text-center mb-4"></div>
+        <div id="problem-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4"></div>
     </div>
 
     <script type="module" src="getProblems.js"></script>
+    <style>.hoverUnderline:hover{text-decoration: underline;}</style>
 </body>
 </html>
