--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         
 
         <br>
-        <a href="/problems" class="text-4xl font-bold text-center mb-6 hoverUnderline text-blue-400">Problems List</h1><br><br>
+        <a href="/problems" class="text-4xl font-bold text-center mb-6 hoverUnderline text-blue-400">Problems List</h1><br>
+        <a href="/contests" class="text-4xl font-bold text-center mb-6 hoverUnderline text-blue-400">Contests</h1><br><br>
         <a href="https://codejoint.org/" class="text-2xl font-bold text-center mb-6 hoverUnderline text-blue-400">About</h1>
     </div>
 
