--- a/contests/contest_1/index.html
+++ b/contests/contest_1/index.html
@@ -1,1 +1,28 @@
-ooga boog suck on my toes
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contest 1</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-900 text-gray-100">
+    <header class="p-4">
+
+        <a href="../" class="text-blue-400 hover:underline">← Back to Contest List</a>
+    </header>
+
+    <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl">
+
+        <h1 class="text-4xl font-bold text-center mb-6">Contest 1</h1>
+        <!-- Uncomment to enable link -->
+        <div id="contest-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4">
+            <p>
+                <a href="./test/" class="hoverUnderline">test</a>
+            </p>
+        </div>
+    </div>
+
+    <style>.hoverUnderline:hover{text-decoration: underline;}</style>
+</body>
+</html>
