--- a/contests/index.html
+++ b/contests/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Problems List</title>
+    <title>Contests</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-gray-100">
@@ -16,7 +16,7 @@
             </svg>
         </a>
 
-        <h1 class="text-4xl font-bold text-center mb-6">Problems List</h1>
+        <h1 class="text-4xl font-bold text-center mb-6">Contests</h1>
         <!-- Uncomment to enable link -->
         <div id="problem-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4"></div>
     </div>
