--- a/contests/Contest_1/index.html
+++ b/contests/Contest_1/index.html
@@ -14,11 +14,18 @@
 
     <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl">
 
+        <a href="/" style="position: fixed">
+            <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 9.5L12 3L21 9.5V20C21 20.5523 20.5523 21 20 21H4C3.44772 21 3 20.5523 3 20V9.5Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M9 21V12H15V21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </a>
+
         <h1 class="text-4xl font-bold text-center mb-6">Contest 1</h1>
         <!-- Uncomment to enable link -->
         <div id="contest-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4">
             <p>
-                <a href="./test/" class="hoverUnderline">test</a>
+                <a href="./A/" class="hoverUnderline">A. is Robin cooler than Vincent?</a>
             </p>
         </div>
     </div>
