--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <a href="/problems" class="text-4xl font-bold text-center mb-6 hover:underline text-blue-400">Problems List</a><br>
         <a href="/contests" class="text-4xl font-bold text-center mb-6 hover:underline text-blue-400">Contests</a><br><br>
         <a href="https://codejoint.org/" class="text-2xl font-bold text-center mb-6 hover:underline text-blue-400">About</a><br><br>
+        <p class="font-bold text-center white text-sm" style="margin-bottom: -4px">
+            Contact us (for support, to delete your account, feedback/suggestions, or out of curiousty) at codejointcrew@gmail.com
+        </p>
+
     </div>
     
 
