--- a/contests/Contest_1/A/index.html
+++ b/contests/Contest_1/A/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script type="module" src="/contests/problemscript.js" defer></script>
+    <script type="module" src="/problems/problemscript.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/problems/problemstyle.css">
 </head>
