--- a/contests/Contest_1/A/index.html
+++ b/contests/Contest_1/A/index.html
@@ -8,7 +8,7 @@
     <script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
     <script type="module" src="/contests/problemscript.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/problems/problemstyle.css">
+    <link rel="stycomlesheet" href="/problems/problemstyle.css">
 </head>
 <body class="bg-gray-900 text-gray-100">
     <header class="p-4">
