--- a/contests/Contest_1/index.html
+++ b/contests/Contest_1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contest 1</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/contests/getTiming.js"></script>
 </head>
 <body class="bg-gray-900 text-gray-100">
     <header class="p-4">
@@ -21,7 +22,8 @@
             </svg>
         </a>
 
-        <h1 class="text-4xl font-bold text-center mb-6">Contest 1</h1>
+        <h1 class="text-4xl font-bold text-center mb-6">Contest 1</h1><br>
+        <h1 class="text-2xl font-bold text-center mb-6" id="contest timing"></h1><br>
         <!-- Uncomment to enable link -->
         <div id="contest-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4">
             <p>
