--- a/contests/Contest_1/A/index.html
+++ b/contests/Contest_1/A/index.html
@@ -7,14 +7,14 @@
     <script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
     <script type="module" src="/problems/problemscript.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stycomlesheet" href="/problems/problemstyle.css">
+    <link rel="stylesheet" href="/problems/problemstyle.css">
 </head>
 <body class="bg-gray-900 text-gray-100">
     <header class="p-4">
-        <a href="../" class="text-blue-400 hover:underline">← Back to Contest</a>
+        <a href="../" class="text-blue-400 hover:underline">← Back to Problem List</a>
     </header>
     <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 rounded-xl shadow-lg">
-        <h2 class="text-3xl font-bold text-center mb-6">A. is Robin cooler than Vincent?</h2>
+        <h2 class="text-3xl font-bold text-center mb-6">Test</h2>
         
         <div id="result"></div>
         <br>
