--- a/contests/Contest_1/index.html
+++ b/contests/Contest_1/index.html
@@ -32,7 +32,7 @@
         <!-- Uncomment to enable link -->
         <div id="contest-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4">
             <p>
-                <a href="./A/" class="hoverUnderline">A. is Robin cooler than Vincent?</a>
+                <a href="./A/" class="hoverUnderline">A. Is Robin Cooler Than Vincent?</a>
             </p>
         </div>
     </div>
