--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="/contests" class="text-4xl font-bold text-center mb-6 hover:underline text-blue-400">Contests</a><br><br>
         <a href="https://codejoint.org/" class="text-2xl font-bold text-center mb-6 hover:underline text-blue-400">About</a><br><br>
         <p class="font-bold text-center white text-sm" style="margin-bottom: -4px">
-            Contact us (for support, to delete your account, feedback/suggestions, or out of curiousty) at codejointcrew@gmail.com
+            Contact us (for support, to delete your account, feedback/suggestions, or out of curiousity) at codejointcrew@gmail.com
         </p>
 
     </div>
