added banner for language clarity

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     
         <!-- Main Title -->
         <h1 class="text-5xl font-bold text-center mb-6 text-white">Home</h1>
+        <p class="font-bold text-center red text-sm" style="margin-bottom: -4px">
+            Note: currently the only language supported is Python    
+        </p>
     
         <br>
         <a href="/problems" class="text-4xl font-bold text-center mb-6 hover:underline text-blue-400">Problems List</a><br>
