added password resetting. it seems to work?

--- a/login/index.html
+++ b/login/index.html
@@ -29,6 +29,8 @@
                 <input id="password" type="password" class="w-full p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none" placeholder="Enter your password" required>
             </div>
 
+            <a href="/forgotPassword" class="text-blue-400 hover:underline">Forgot password?</a>
+
             <!-- Login Button -->
             <div>
                 <button id="loginButton" type="submit" class="w-full p-2 rounded-lg bg-blue-500 text-white hover:bg-blue-600 focus:outline-none">Login</button>
