--- a/problems/2._Lendrick_Kamar/index.html
+++ b/problems/2._Lendrick_Kamar/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-900 text-gray-100">
     <header class="p-4">
-        <a href="../" class="text-blue-400 hover:underline">← Back to Problem List</a>
+        <a href="/problems" class="text-blue-400 hover:underline">← Back to Problem List</a>
     </header>
     <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 rounded-xl shadow-lg">
         <h2 class="text-3xl font-bold text-center mb-6">Lendrick Kamar</h2>
