--- a/contests/index.html
+++ b/contests/index.html
@@ -17,8 +17,7 @@
         </a>
 
         <h1 class="text-4xl font-bold text-center mb-6">Contests</h1>
-        <!-- Uncomment to enable link -->
-        <div id="problem-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4"></div>
+        <div id="contest-list" class="text-2xl space-y-4 block text-blue-400 text-center mb-4"></div>
     </div>
 
     <script type="module" src="getContests.js"></script>
