--- a/src/public/problems/1._Test/index.html
+++ b/src/public/problems/1._Test/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
     <script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script type="module" src="/problems/problemscript.js" defer></script>
+    <script type="module" src="/problems/problem-script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/problems/problemstyle.css">
+    <link rel="stylesheet" href="/problems/problem-style.css">
 </head>
 <body class="bg-gray-900 text-gray-100">
     <header class="p-4">
@@ -37,7 +37,7 @@
             <pre id="editor"></pre>
         </div><br>
         
-        <button id="submitButton" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Submit</button>
+        <button id="submit-button" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Submit</button>
     </div>
     <br><br><br>
 </body>
